# WallpaperLite-CLI

./: CMakeLists.txt  README.md  auto_builder.bat  wallpaperLite-CLI.c  wallpaperLite.c  wallpaperLite.sln  wallpaperLite.vcxproj  wallpaperLite.vcxproj.filters
VLCmin/includs/: libvlc_events.h  libvlc_media.h  libvlc_media_list_player.h
wallpaperLite/Debug/: vc143.idb  wallpaperLite.exe.recipe  wallpaperLite.ilk
wallpaperLite/Debug/wallpaperLite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  wallpaperLite.lastbuildstate
wallpaperLite/x64/Debug/: vc143.idb  wallpaperLite.exe.recipe  wallpaperLite.ilk
wallpaperLite/x64/Debug/wallpaperLite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  wallpaperLite.lastbuildstate
